Bug 127858 - Assertion when trying to edit a form (Linux gen rendering)
Summary: Assertion when trying to edit a form (Linux gen rendering)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: bibisectRequest, haveBacktrace, regression
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-09-29 09:13 UTC by Julien Nabet
Modified: 2019-10-02 06:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (16.67 KB, text/plain)
2019-09-29 09:14 UTC, Julien Nabet
Details
bt Windows (windbg) (43.34 KB, text/plain)
2019-10-01 10:00 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-09-29 09:13:20 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil + gen, I got an assertion when trying to edit a form


Steps to Reproduce:
1. Retrieve file https://bugs.documentfoundation.org/attachment.cgi?id=112417
2. Open the file
3. Edit any of the 2 forms



Actual Results:
Assertion

Expected Results:
No assertion


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-09-29 09:14:03 UTC
Created attachment 154635 [details]
bt with debug symbols
Comment 2 Julien Nabet 2019-09-29 09:16:05 UTC
Noel: thought you might be interested in this one considering the assertion has been added with 78b9dac2ee77bf6efc1298962cbeca284db5b00a
Comment 3 Julien Nabet 2019-09-29 09:21:54 UTC
Noel: about 32 bits bmp, except in https://opengrok.libreoffice.org/xref/core/svx/source/sdr/primitive2d/sdrprimitivetools.cxx?r=a2bd7470#56
56      BitmapEx aBitmap = vcl::bitmap::CreateFromData(cross, 3, 3, 12, 32);

I also noticed this one with grep -n CreateFromData:
   1669                     BitmapEx aImage = vcl::bitmap::CreateFromData(maBitmap.data(), nImageWidth, nImageLength,
   1670                             nImageWidth * (HasAlphaChannel() ? 4 : 3), // scanline bytes
   1671                             HasAlphaChannel() ? 32 : 24);

See https://opengrok.libreoffice.org/xref/core/filter/source/graphicfilter/itiff/itiff.cxx?r=09ad0e78#1669
Comment 4 Julien Nabet 2019-10-01 10:00:25 UTC
Created attachment 154675 [details]
bt Windows (windbg)

On Win10 with master sources updated today, I could reproduce this.
Quite weirdly, the bt is completely different.
Comment 5 Commit Notification 2019-10-02 06:02:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5da08d7b14b03459070228bad1b42dc5d1746b9f

tdf#127858 Assertion when trying to edit a form (gen backend)

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.