tdf#127858 Assertion when trying to edit a form (gen backend)

regression from
	commit 78b9dac2ee77bf6efc1298962cbeca284db5b00a
    remove internal use of 16-bit packed formats

we are trying to create a 32-bit image in
drawinglayer::primitive2d::createDefaultCross_3x3

Change-Id: Iaf19326b1e2c11c5d535dd8f317086bebbaaebec